[Sensors] Fix reading updates after page refresh

This patch fixes reading updates after page refresh. The route cause of the problem was that the outdated document instance was cached in SensorProxy.

BUG=679243
BUG=606766

Review-Url: https://codereview.chromium.org/2644873002
Cr-Commit-Position: refs/heads/master@{#446658}

Former-commit-id: c78e848fc18f203167cb53aedc0e3736bce149b1