third_party/WebKit/Source/modules/sensor/SensorProviderProxy.h
@@ -13,7 +13,6 @@
 
 namespace blink {
 
-class Document;
 class SensorProxy;
 class SensorReadingFactory;
 
@@ -31,7 +30,7 @@ class SensorProviderProxy final
   ~SensorProviderProxy();
 
   SensorProxy* createSensorProxy(device::mojom::blink::SensorType,
-                                 Document*,
+                                 Page*,
                                  std::unique_ptr<SensorReadingFactory>);
 
   SensorProxy* getSensorProxy(device::mojom::blink::SensorType);
